# saengsation

./: .gitignore  Makefile  README.md  effects.go  go.mod  main.py  pyproject.toml  states.go
cmd/: default-states.json  effects_test.go  keychron.go  keychron_test.go  main.go  states.go  states_test.go
config/: 99-saengsation.rules  default-states.json
saengsation/: __main__.py  cli.py  keychron.py  states.py
scripts/: check-deps.sh  demo-states.sh  demo.sh  install-hidraw.sh  install-hooks.sh  install.sh  setup.sh
skill/: claude-settings-example.json  hooks.sh  saengsation.md
